--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,23 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.App {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.content {
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .header {
+	width: 100%;
 	color: lavenderblush;
 	padding: 20px;
 	margin-bottom: 50px;
@@ -19,6 +35,7 @@ body {
 
 .question {
 	margin: 20px;
+	width: 100%;
 	font-size: 30px;
 	text-align: center;
 	padding: 20px;
@@ -61,6 +78,7 @@ body {
 
 .submitBtn {
 	display: flex;
+	width: 100%;
 	border-radius: 10px;
 	font-size: 30px;
 	color: #000000;
@@ -104,6 +122,7 @@ body {
 }
 
 .nextBtn {
+	width: 100%;
 	padding: 10px;
 	text-align: center;
 	font-weight: bold;
