--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,11 @@ body {
 }
 
 .App {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	margin-bottom: 20px;
 }
 
 .content {
+	margin: 0 auto;
 	width: 50%;
 	display: flex;
 	flex-direction: column;
@@ -23,31 +21,52 @@ body {
 	align-items: center;
 }
 
+@media only screen and (max-width: 800px) {
+	.content {
+		width: 90%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+}
+
 .header {
 	width: 100%;
 	color: lavenderblush;
-	padding: 20px;
+	padding: 20px 0px;
 	margin-bottom: 50px;
 	font-size: 24px;
 	background-color: #2c2c2c77;
 	font-weight: bold;
 }
 
+.title {
+	padding: 0px 20px;
+}
+
 .question {
-	margin: 20px;
 	width: 100%;
+	margin: 20px;
 	font-size: 30px;
 	text-align: center;
-	padding: 20px;
+	padding: 20px 0px;
 	border-radius: 10px;
 	background-color: #2c2c2c77;
 	color: lavenderblush;
 }
 
+.code-div {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
 .code {
+	overflow-x: auto;
 	color: lightblue;
 	font-family: "Courier New", Courier, monospace;
-	margin: 50px 20px 20px 20px;
+	margin: 50px 30px 20px 30px;
 	padding: 10px;
 	border-radius: 10px;
 }
@@ -57,7 +76,7 @@ body {
 	color: lavenderblush;
 	text-align: center;
 	font-size: 24px;
-	padding: 10px;
+	padding: 20px;
 	margin: 20px;
 	border-radius: 10px;
 }
@@ -70,7 +89,7 @@ body {
 .option-selected {
 	text-align: center;
 	font-size: 24px;
-	padding: 10px;
+	padding: 20px;
 	margin: 20px;
 	border-radius: 10px;
 	background-color: #a6e22e;
@@ -78,13 +97,13 @@ body {
 
 .submitBtn {
 	display: flex;
-	width: 100%;
+	width: 90%;
 	border-radius: 10px;
 	font-size: 30px;
 	color: #000000;
 	font-weight: bold;
 	justify-content: center;
-	padding: 10px;
+	padding: 20px;
 	margin: 60px 20px 20px 20px;
 	background-color: #f92672;
 }
@@ -122,8 +141,8 @@ body {
 }
 
 .nextBtn {
-	width: 100%;
-	padding: 10px;
+	width: 90%;
+	padding: 20px;
 	text-align: center;
 	font-weight: bold;
 	margin: 10px 20px 10px 20px;
