--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ body {
 	color: lavenderblush;
 	text-align: center;
 	font-size: 24px;
-	padding: 20px;
+	padding: 15px 20px;
 	margin: 20px;
 	border-radius: 10px;
 }
@@ -89,7 +89,7 @@ body {
 .option-selected {
 	text-align: center;
 	font-size: 24px;
-	padding: 20px;
+	padding: 15px 20px;
 	margin: 20px;
 	border-radius: 10px;
 	background-color: #a6e22e;
@@ -103,7 +103,7 @@ body {
 	color: #000000;
 	font-weight: bold;
 	justify-content: center;
-	padding: 20px;
+	padding: 10px;
 	margin: 60px 20px 20px 20px;
 	background-color: #f92672;
 }
@@ -142,7 +142,7 @@ body {
 
 .nextBtn {
 	width: 90%;
-	padding: 20px;
+	padding: 10px;
 	text-align: center;
 	font-weight: bold;
 	margin: 10px 20px 10px 20px;
